--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 #    python3 -m pip install -r requirements.txt
 numpy
 
-# tkinter is part of the interpreter and not available thhrough pip. Instead, install
+# tkinter is part of the interpreter and not available through pip. Instead, install
 # this package if you're on an Ubuntu-like:
 #    sudo apt install python3-tk
